Fixes 'Save time. Save travel...' spacing

--- a/themes/newave/src/scss/pages/_why.scss
+++ b/themes/newave/src/scss/pages/_why.scss
@@ -38,14 +38,21 @@ $blackish: rgb(16, 25, 29);
   .save {
     background-color: rgb(94, 112, 119);
     color: white;
-    padding-bottom: 4%;
+    h2 {
+      @include responsive-font(5.3vw, 10px, 49px, 14px);
+    }
     .inner {
-      width: 82%;
       margin: 0 auto;
+      text-align: center;
+      white-space: nowrap;
+      overflow: hidden;
+
 
       .icons {
+        width: 82%;
+        margin: 0 auto;
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         // margin-top: -40px;
         // @include at-least(phablet) {
         //   margin-top: 0;
